<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/explore_menu"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/explore_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/post_menu"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/post_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/activity_menu"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/activity_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom"/>
</menu>